# clasp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPAT.md  EXAMPLES.md  README.md  codecov.yml  todo.md
.github/workflows/: ci.yml  docs.yml
cmake/: claspConfig.cmake.in
docs/: README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vuepress/: config.js
docs/.vuepress/styles/: palette.styl
docs/guide/: commands.md  completion.md  config.md  extending.md  flags.md  getting-started.md  index.md  templates.md
docs/reference/: README.md  api.md  compat.md  examples.md  index.md
docs/zh/: index.md
docs/zh/guide/: commands.md  completion.md  config.md  extending.md  getting-started.md  index.md
docs/zh/reference/: api.md  compat.md  examples.md
examples/: api_coverage_example.cpp  args_example.cpp  basic_example.cpp  bytes_example.cpp  color_coverage_example.cpp  command_coverage_example.cpp  completion_coverage_example.cpp  completion_example.cpp  completion_naming_example.cpp  config.env  config.ini  config.json  config.toml  config.yaml  config_bad.toml  config_empty.env  config_empty.ini  config_empty.toml  config_empty.yaml  config_example.cpp  config_ini_example.cpp  config_json_example.cpp  config_list.json  config_list.toml  config_list.yaml  config_list_example.cpp  config_toml_example.cpp  config_unknown.xyz  config_yaml_example.cpp  context_example.cpp  count_example.cpp  custom_template_example.cpp  custom_value.env  custom_value_example.cpp  deprecated_example.cpp  directive_example.cpp  disable_flags_in_use_line_example.cpp  docs_example.cpp  dynamic_completion_example.cpp  execute_coverage_example.cpp  (+37 more)
include/clasp/: clasp.hpp  color.hpp  command.h  command.hpp  flag.hpp  parser.hpp  utils.hpp  value.hpp
include/clasp/detail/: value_parse.hpp
packaging/vcpkg/: README.md  portfile.cmake  usage  vcpkg.json
src/: color.cpp  command.cpp  flag.cpp
tests/: api.cpp  color.cpp  command_advanced.cpp  command_coverage.cpp  command_edge.cpp  command_misc.cpp  parser.cpp  parser_advanced.cpp  parser_edge.cpp  parser_extra_coverage.cpp  parser_misc.cpp  persistent_completion.cpp  run_coverage.cpp  special_flags.cpp  utils.cpp  value_parse.cpp
